--- a/complexite/readme
+++ b/complexite/readme
@@ -1,9 +1,12 @@
-Spécificité techniques du projet à élaborer:
+Spécificité techniques du projet à élaborer
 -------------------------------------------
 
 L'architecture utilisée est l'architecture en couche.
 
 Le fichier Projet_triV4.py contient l'architecture du code à complèter par la fonction tri-rapide.
+
+Téléchargé le dépot dans votre espace pour commmencer à travailler
+------------------------------------------------------------------
 
 Bibliothèques utilisées
 -------------------------------------------
